--- a/client/src/components/Headquarters/ShtabItem.scss
+++ b/client/src/components/Headquarters/ShtabItem.scss
@@ -4,7 +4,8 @@
     display: flex;
     align-items: center;
     
-    width: 50%;
+    max-width: 50%;
+    min-width: 50%;
     &_map{
         width: 30%;
 
